--- a/styles/prosilver/template/event/index_body_markforums_before.html
+++ b/styles/prosilver/template/event/index_body_markforums_before.html
@@ -1,9 +1,12 @@
-<div class="action-bar compact">
-	{% if S_REGISTERED_USER %}
-		{% if USER_POST_COUNT == '1' %}
-				<a href="search.php?author_id={S_USER_ID}&sr=posts" class="mark-read leftside" title="search your posts">You have {USER_POST_COUNT} post!</a>
-			{% else %}
-				<a href="search.php?author_id={S_USER_ID}&sr=posts" class="mark-read leftside" title="search your posts">You have {USER_POST_COUNT} posts!</a>
+<!-- IF U_MARK_FORUMS -->
+	<div class="pcoi-container postcountonindex-block">
+		<a href="{U_MARK_FORUMS}" class="mark-read rightside" accesskey="m" data-ajax="mark_forums_read">{L_MARK_FORUMS_READ}</a>
+		{% if S_REGISTERED_USER %}
+			{% if USER_POST_COUNT == '1' %}
+				<a href="search.php?author_id={S_USER_ID}&sr=posts" class="mark-read leftside" title="Search your posts">You have {USER_POST_COUNT} post.</a>
+				{% else %}
+				<a href="search.php?author_id={S_USER_ID}&sr=posts" class="mark-read leftside" title="Search your posts">You have {USER_POST_COUNT} posts!</a>
+			{% endif %}
 		{% endif %}
-	{% endif %}
-</div>
+	</div>
+<!-- ENDIF -->
