--- a/styles/prosilver/template/event/overall_header_head_append.html
+++ b/styles/prosilver/template/event/overall_header_head_append.html
@@ -1,1 +1,1 @@
-<!-- INCLUDECSS @restlessrancor_postcountonindex/postcountonindex.css -->
+{% INCLUDECSS '@restlessrancor_postcountonindex/postcountonindex.css' %}
