--- a/styles/prosilver/template/event/index_body_markforums_before.html
+++ b/styles/prosilver/template/event/index_body_markforums_before.html
@@ -1,4 +1,4 @@
-<!-- IF U_MARK_FORUMS -->
+{% if U_MARK_FORUMS %}
 	<div class="pcoi-container postcountonindex-block">
 		<a href="{U_MARK_FORUMS}" class="mark-read rightside" accesskey="m" data-ajax="mark_forums_read">{L_MARK_FORUMS_READ}</a>
 		{% if S_REGISTERED_USER %}
@@ -9,4 +9,4 @@
 			{% endif %}
 		{% endif %}
 	</div>
-<!-- ENDIF -->
+{% if U_MARK_FORUMS %}
