--- a/styles/prosilver/template/event/index_body_block_stats_append.html
+++ b/styles/prosilver/template/event/index_body_block_stats_append.html
@@ -1,3 +1,3 @@
-{% if S_PCOI_ENABLE and S_PCOI_STATISTICS %}
-	<br /><a href="search.php?author_id={{ S_USER_ID }}&sr=posts" class="mark-read leftside" title="Search your posts">{{ lang(USER_POST_COUNT) }}</a>
+{% if S_PCOI_STATISTICS %}
+	<br /><a href="search.php?author_id={{ S_USER_ID }}&sr=posts" class="mark-read leftside" title="Search your posts">{{ S_USER_POST_COUNT }}</a>
 {% endif %}
